fixed align-items in index.html

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body{
 
 .container section{
     display: flex;
+    align-items: center;
 }
 
 .works{
